# DesktopAdventures

./: .cproject  .gitignore  .project  AUTHORS.md  CMakeLists.txt  README.md  SCRIPTS.md  assets.c  assets.h  character.c  character.h  map.c  map.h  objectinfo.h  palette.h  puzzle.h  scrdoc.txt  screen.c  screen.h  sound.h  tile.h  tname.h  useful.c  useful.h
3ds/: Makefile  main.c
3ds/caelina/include/: gfx_device.h
3ds/caelina/include/GL/: gl.h
pc/: main.c  main.h
src/: assets.c  character.c  font.c  iact.c  input.c  map.c  palette.c  player.c  puzzle.c  render_buffer.c  render_gl.c  screen.c  ui.c  useful.c  world.c
src/3ds/: Makefile  main.c  main.h
src/include/: assets.h  character.h  font.h  iact.h  input.h  map.h  objectinfo.h  palette.h  player.h  puzzle.h  screen.h  sound.h  tile.h  tname.h  ui.h  useful.h  world.h
src/pc/: main.c  main.h  sound.c
src/switch/: Makefile  draw.c  draw.h  main.c  sound.c
src/wiiu/: Makefile  draw.c  draw.h  font.c  main.c  sound.c
